// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpacingStyled /> should render the component with all properties as true 1`] = `
<SpacingBlockStyled
  bottom={true}
  left={true}
  right={true}
  theme={
    Object {
      "bodyBackground": "#292d33",
      "borderRadius": Object {
        "giga": "5px",
        "kilo": "1px",
        "mega": "4px",
      },
      "borderWidth": Object {
        "bit": "1px",
        "byte": "2px",
      },
      "boxShadow": Object {
        "drawer": "0 2px 34px 0 rgba(0, 0, 0, 0.3)",
        "switchHandler": "0px 0px 1px 5px rgba(255, 255, 255, 0.2)",
      },
      "breakpoints": Object {
        "default": Object {
          "minWidth": 768,
        },
        "desktop": Object {
          "maxWidth": 1200,
          "minWidth": 992,
        },
        "largeDesktop": Object {
          "minWidth": 1200,
        },
        "mobile": Object {
          "maxWidth": 768,
          "minWidth": 0,
        },
        "tablet": Object {
          "maxWidth": 992,
          "minWidth": 768,
        },
      },
      "colors": Object {
        "black": "#000",
        "green100": "#c6e5cb",
        "green300": "#97e2a3",
        "green500": "#62de76",
        "green700": "#49b85b",
        "green900": "#2f903e",
        "grey100": "#96a2b0",
        "grey1000": "#6d7785",
        "grey1100": "#b2b8c0",
        "grey1200": "#909295",
        "grey200": "#3f454d",
        "grey300": "#343a42",
        "grey400": "#292d33",
        "grey500": "#40464f",
        "grey600": "#8C9BA5",
        "grey700": "#24282E",
        "grey800": "#23262C",
        "grey900": "#292D33",
        "primary100": "#3f9bfd",
        "primary200": "#375f8a",
        "primary300": "#324e70",
        "primary400": "#96a2b0",
        "primary500": "#484e58",
        "red100": "#cb3548",
        "red300": "#9b5a62",
        "red500": "#ff7559",
        "red700": "#d55a41",
        "red900": "#a94442",
        "white": "#fff",
        "yellow100": "#f2e5cb",
        "yellow300": "#f7da9f",
        "yellow500": "#ffc859",
        "yellow700": "#d4a546",
        "yellow900": "#ab8433",
      },
      "composedSpacings": Object {
        "byte": "10px 15px",
      },
      "dangerColor": "#cb3548",
      "fontFamily": Object {
        "color": "#fff",
        "default": "\\"Open Sans\\", sans-serif",
      },
      "fontSize": Object {
        "bit": "11px",
        "byte": "13px",
        "giga": "24px",
        "kilo": "15px",
        "mega": "18px",
      },
      "fontWeight": Object {
        "bold": 700,
        "light": 300,
        "regular": 400,
        "semiBold": 600,
      },
      "grid": Object {
        "outerGutter": "10px",
      },
      "inputBackgroundColor": "#292d33",
      "inputBorderColor": "#3f454d",
      "inputBorderColorHover": "#6d7785",
      "inputBorderRadius": "4px",
      "inputBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "inputDefaultHeight": "40px",
      "inputDisabledBackgroundColor": "#343a42",
      "inputErrorBorderColor": "#9b5a62",
      "inputFontSize": "13px",
      "inputLineHeight": "40px",
      "inputPlaceholderColor": "#909295",
      "inputTextColor": "#fff",
      "lineHeight": Object {
        "bit": 1.153,
        "byte": 1.333,
        "kilo": 1.5,
      },
      "mainBackground": "343941",
      "overlayColor": "rgba(25, 29, 35, 0.82)",
      "primaryColor": "#3f9bfd",
      "selectItemDisabledColor": "#96a2b0",
      "selectItemDisabledHoverBackgroundColor": "#292d33",
      "selectItemFocus": "#343a42",
      "selectMultiTagBackgroundColor": "#3f9bfd",
      "selectMultiTagTextColor": "#fff",
      "selectSingleTextColor": "#fff",
      "spacings": Object {
        "bit": "1px",
        "byte": "5px",
        "giga": "20px",
        "kilo": "10px",
        "mega": "15px",
      },
      "successColor": "#49b85b",
      "textColor": "#fff",
      "transitions": Object {
        "overlayTransition": "opacity 0.3s ease-out, visibility 0.3s ease-out",
      },
      "warningColor": "#d4a546",
      "zIndex": Object {
        "drawerContent": 2041,
        "drawerOverlay": 2040,
        "loadingBar": 3000,
        "navbar": 2030,
        "select": 1090,
        "spinner": 2041,
        "spinnerOverlay": 2040,
        "tooltip": 2020,
      },
    }
  }
  top={true}
  type="margin"
>
  <div
    className="SpacingBlockStyled-cDrbtl eoxfIb"
    type="margin"
  />
</SpacingBlockStyled>
`;

exports[`<SpacingStyled /> should render the component with padding instead of margin 1`] = `
<SpacingBlockStyled
  bottom={true}
  left={true}
  right={true}
  theme={
    Object {
      "bodyBackground": "#292d33",
      "borderRadius": Object {
        "giga": "5px",
        "kilo": "1px",
        "mega": "4px",
      },
      "borderWidth": Object {
        "bit": "1px",
        "byte": "2px",
      },
      "boxShadow": Object {
        "drawer": "0 2px 34px 0 rgba(0, 0, 0, 0.3)",
        "switchHandler": "0px 0px 1px 5px rgba(255, 255, 255, 0.2)",
      },
      "breakpoints": Object {
        "default": Object {
          "minWidth": 768,
        },
        "desktop": Object {
          "maxWidth": 1200,
          "minWidth": 992,
        },
        "largeDesktop": Object {
          "minWidth": 1200,
        },
        "mobile": Object {
          "maxWidth": 768,
          "minWidth": 0,
        },
        "tablet": Object {
          "maxWidth": 992,
          "minWidth": 768,
        },
      },
      "colors": Object {
        "black": "#000",
        "green100": "#c6e5cb",
        "green300": "#97e2a3",
        "green500": "#62de76",
        "green700": "#49b85b",
        "green900": "#2f903e",
        "grey100": "#96a2b0",
        "grey1000": "#6d7785",
        "grey1100": "#b2b8c0",
        "grey1200": "#909295",
        "grey200": "#3f454d",
        "grey300": "#343a42",
        "grey400": "#292d33",
        "grey500": "#40464f",
        "grey600": "#8C9BA5",
        "grey700": "#24282E",
        "grey800": "#23262C",
        "grey900": "#292D33",
        "primary100": "#3f9bfd",
        "primary200": "#375f8a",
        "primary300": "#324e70",
        "primary400": "#96a2b0",
        "primary500": "#484e58",
        "red100": "#cb3548",
        "red300": "#9b5a62",
        "red500": "#ff7559",
        "red700": "#d55a41",
        "red900": "#a94442",
        "white": "#fff",
        "yellow100": "#f2e5cb",
        "yellow300": "#f7da9f",
        "yellow500": "#ffc859",
        "yellow700": "#d4a546",
        "yellow900": "#ab8433",
      },
      "composedSpacings": Object {
        "byte": "10px 15px",
      },
      "dangerColor": "#cb3548",
      "fontFamily": Object {
        "color": "#fff",
        "default": "\\"Open Sans\\", sans-serif",
      },
      "fontSize": Object {
        "bit": "11px",
        "byte": "13px",
        "giga": "24px",
        "kilo": "15px",
        "mega": "18px",
      },
      "fontWeight": Object {
        "bold": 700,
        "light": 300,
        "regular": 400,
        "semiBold": 600,
      },
      "grid": Object {
        "outerGutter": "10px",
      },
      "inputBackgroundColor": "#292d33",
      "inputBorderColor": "#3f454d",
      "inputBorderColorHover": "#6d7785",
      "inputBorderRadius": "4px",
      "inputBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "inputDefaultHeight": "40px",
      "inputDisabledBackgroundColor": "#343a42",
      "inputErrorBorderColor": "#9b5a62",
      "inputFontSize": "13px",
      "inputLineHeight": "40px",
      "inputPlaceholderColor": "#909295",
      "inputTextColor": "#fff",
      "lineHeight": Object {
        "bit": 1.153,
        "byte": 1.333,
        "kilo": 1.5,
      },
      "mainBackground": "343941",
      "overlayColor": "rgba(25, 29, 35, 0.82)",
      "primaryColor": "#3f9bfd",
      "selectItemDisabledColor": "#96a2b0",
      "selectItemDisabledHoverBackgroundColor": "#292d33",
      "selectItemFocus": "#343a42",
      "selectMultiTagBackgroundColor": "#3f9bfd",
      "selectMultiTagTextColor": "#fff",
      "selectSingleTextColor": "#fff",
      "spacings": Object {
        "bit": "1px",
        "byte": "5px",
        "giga": "20px",
        "kilo": "10px",
        "mega": "15px",
      },
      "successColor": "#49b85b",
      "textColor": "#fff",
      "transitions": Object {
        "overlayTransition": "opacity 0.3s ease-out, visibility 0.3s ease-out",
      },
      "warningColor": "#d4a546",
      "zIndex": Object {
        "drawerContent": 2041,
        "drawerOverlay": 2040,
        "loadingBar": 3000,
        "navbar": 2030,
        "select": 1090,
        "spinner": 2041,
        "spinnerOverlay": 2040,
        "tooltip": 2020,
      },
    }
  }
  top={true}
  type="padding"
>
  <div
    className="SpacingBlockStyled-cDrbtl csVoMA"
    type="padding"
  />
</SpacingBlockStyled>
`;

exports[`<SpacingStyled /> should render the component with the default props 1`] = `
<SpacingBlockStyled
  theme={
    Object {
      "bodyBackground": "#292d33",
      "borderRadius": Object {
        "giga": "5px",
        "kilo": "1px",
        "mega": "4px",
      },
      "borderWidth": Object {
        "bit": "1px",
        "byte": "2px",
      },
      "boxShadow": Object {
        "drawer": "0 2px 34px 0 rgba(0, 0, 0, 0.3)",
        "switchHandler": "0px 0px 1px 5px rgba(255, 255, 255, 0.2)",
      },
      "breakpoints": Object {
        "default": Object {
          "minWidth": 768,
        },
        "desktop": Object {
          "maxWidth": 1200,
          "minWidth": 992,
        },
        "largeDesktop": Object {
          "minWidth": 1200,
        },
        "mobile": Object {
          "maxWidth": 768,
          "minWidth": 0,
        },
        "tablet": Object {
          "maxWidth": 992,
          "minWidth": 768,
        },
      },
      "colors": Object {
        "black": "#000",
        "green100": "#c6e5cb",
        "green300": "#97e2a3",
        "green500": "#62de76",
        "green700": "#49b85b",
        "green900": "#2f903e",
        "grey100": "#96a2b0",
        "grey1000": "#6d7785",
        "grey1100": "#b2b8c0",
        "grey1200": "#909295",
        "grey200": "#3f454d",
        "grey300": "#343a42",
        "grey400": "#292d33",
        "grey500": "#40464f",
        "grey600": "#8C9BA5",
        "grey700": "#24282E",
        "grey800": "#23262C",
        "grey900": "#292D33",
        "primary100": "#3f9bfd",
        "primary200": "#375f8a",
        "primary300": "#324e70",
        "primary400": "#96a2b0",
        "primary500": "#484e58",
        "red100": "#cb3548",
        "red300": "#9b5a62",
        "red500": "#ff7559",
        "red700": "#d55a41",
        "red900": "#a94442",
        "white": "#fff",
        "yellow100": "#f2e5cb",
        "yellow300": "#f7da9f",
        "yellow500": "#ffc859",
        "yellow700": "#d4a546",
        "yellow900": "#ab8433",
      },
      "composedSpacings": Object {
        "byte": "10px 15px",
      },
      "dangerColor": "#cb3548",
      "fontFamily": Object {
        "color": "#fff",
        "default": "\\"Open Sans\\", sans-serif",
      },
      "fontSize": Object {
        "bit": "11px",
        "byte": "13px",
        "giga": "24px",
        "kilo": "15px",
        "mega": "18px",
      },
      "fontWeight": Object {
        "bold": 700,
        "light": 300,
        "regular": 400,
        "semiBold": 600,
      },
      "grid": Object {
        "outerGutter": "10px",
      },
      "inputBackgroundColor": "#292d33",
      "inputBorderColor": "#3f454d",
      "inputBorderColorHover": "#6d7785",
      "inputBorderRadius": "4px",
      "inputBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "inputDefaultHeight": "40px",
      "inputDisabledBackgroundColor": "#343a42",
      "inputErrorBorderColor": "#9b5a62",
      "inputFontSize": "13px",
      "inputLineHeight": "40px",
      "inputPlaceholderColor": "#909295",
      "inputTextColor": "#fff",
      "lineHeight": Object {
        "bit": 1.153,
        "byte": 1.333,
        "kilo": 1.5,
      },
      "mainBackground": "343941",
      "overlayColor": "rgba(25, 29, 35, 0.82)",
      "primaryColor": "#3f9bfd",
      "selectItemDisabledColor": "#96a2b0",
      "selectItemDisabledHoverBackgroundColor": "#292d33",
      "selectItemFocus": "#343a42",
      "selectMultiTagBackgroundColor": "#3f9bfd",
      "selectMultiTagTextColor": "#fff",
      "selectSingleTextColor": "#fff",
      "spacings": Object {
        "bit": "1px",
        "byte": "5px",
        "giga": "20px",
        "kilo": "10px",
        "mega": "15px",
      },
      "successColor": "#49b85b",
      "textColor": "#fff",
      "transitions": Object {
        "overlayTransition": "opacity 0.3s ease-out, visibility 0.3s ease-out",
      },
      "warningColor": "#d4a546",
      "zIndex": Object {
        "drawerContent": 2041,
        "drawerOverlay": 2040,
        "loadingBar": 3000,
        "navbar": 2030,
        "select": 1090,
        "spinner": 2041,
        "spinnerOverlay": 2040,
        "tooltip": 2020,
      },
    }
  }
  type="margin"
>
  <div
    className="SpacingBlockStyled-cDrbtl eIkgod"
    type="margin"
  />
</SpacingBlockStyled>
`;
